RESOLVED FIXED170777
REGRESSION (r215242-215243): [ios-simulator] API test WebKit1.AudioSessionCategoryIOS is failing
https://bugs.webkit.org/show_bug.cgi?id=170777
Summary REGRESSION (r215242-215243): [ios-simulator] API test WebKit1.AudioSessionCat...
Ryan Haddad
Reported 2017-04-12 10:23:07 PDT
[ios-simulator] API test WebKit1.AudioSessionCategoryIOS is failing FAIL WebKit1.AudioSessionCategoryIOS /Volumes/Data/slave/ios-simulator-10-release/build/Tools/TestWebKitAPI/Tests/WebKit/ios/AudioSessionCategoryIOS.mm:83 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryAmbient" Expected: getAVAudioSessionCategoryPlayback() Which is: "AVAudioSessionCategoryPlayback" https://build.webkit.org/builders/Apple%20iOS%2010%20Simulator%20Release%20WK2%20%28Tests%29/builds/600
Attachments
Proposed patch. (1.73 KB, patch)
2017-04-12 16:40 PDT, Eric Carlson
no flags
Patch for landing. (1.78 KB, patch)
2017-04-12 16:58 PDT, Eric Carlson
no flags
Ryan Haddad
Comment 1 2017-04-12 10:23:56 PDT
This regressed between r215239 and r215244
Ryan Haddad
Comment 2 2017-04-12 10:59:40 PDT
Radar WebKit Bug Importer
Comment 3 2017-04-12 16:32:33 PDT
Eric Carlson
Comment 4 2017-04-12 16:40:04 PDT
Created attachment 306948 [details] Proposed patch.
Eric Carlson
Comment 5 2017-04-12 16:58:06 PDT
Created attachment 306952 [details] Patch for landing.
WebKit Commit Bot
Comment 6 2017-04-12 17:40:41 PDT
Comment on attachment 306952 [details] Patch for landing. Clearing flags on attachment: 306952 Committed r215309: <http://trac.webkit.org/changeset/215309>
Note You need to log in before you can comment on or make changes to this bug.