REGRESSION (r215242-215243): [ios-simulator] API test WebKit1.AudioSessionCategoryIOS is failing https://bugs.webkit.org/show_bug.cgi?id=170777 <rdar://problem/31592877>

Reviewed by Jer Noble.

No new tests, fixes an existing test.

* platform/audio/cocoa/MediaSessionManagerCocoa.cpp:
(PlatformMediaSessionManager::updateSessionState): Pass parameters to lambda by reference.


Canonical link: https://commits.webkit.org/187727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215309 268f45cc-cd09-0410-ab3c-d52691b4dbfc